fix #33: save groups collapsed/expanded state

--- a/app/styles/areas/_menu.scss
+++ b/app/styles/areas/_menu.scss
@@ -57,6 +57,17 @@
       display: none;
     }
 
+    &-collapse {
+      display: none;
+      .menu__item--collapsed>& {
+        display: block;
+        position: absolute;
+        cursor: pointer;
+        @include position(absolute, 50% null null 1em);
+        @include transform(translateY(-50%));
+      }
+    }
+
     &-body {
       @include area-selectable();
       padding: $base-padding;
